Change constructor signature and update getEntites method